[package]
name = "pash-sls-lib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pashlib"
path = "bin/pashlib-oneproc/main.rs"

[[bin]]
name = "stun-test"
path = "bin/stun-test/main.rs"

[dependencies]
# common
rand = "0.8"
serde = "1"
serde_json = "1"
bytes = "1"
anyhow = "1"
rkyv = "0.7"
bincode = "1"
tokio = { version = "1", features = ["macros", "io-util"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
clap = { version = "4.5", features = ["derive", "env"] }
static-toml = "1"
lazy_static = "1.4"
whoami = "1.4"
num_cpus = "1.16"
futures = "0.3"
rayon = "1.8"
indexmap = "2.2"
humantime = "2.1"
parking_lot = { version = "0.12", features = ["send_guard"] }
pprof = { version = "0.13", features = ["flamegraph"] }

# lambda
lambda_runtime = "0.9"

# stun
stun = "0.5"
aws-sdk-lambda = "1.13"
aws-sdk-dynamodb = "1.14"
aws-sdk-s3 = "1.15"
aws-config = "1.1"

# llm
memmap2 = "0.9"
safetensors = "0.3"
tokenizers = "0.15"
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"


[dependencies.uuid]
version = "1.7"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# [profile.release]
# debug = true
